<resources>
    <string name="app_name">NotesApplication</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="add_note">Add Note</string>
    <string name="all_the_notes_that_you_add_will_appear_here_start_writing_now">All the notes that you add will appear here. Start writing now.</string>
    <string name="add_your_first_note">Add your first note</string>
    <string name="write_here">Write here</string>
    <string name="title">Title</string>
    <string name="delete">delete</string>
    <string name="logout">Logout</string>
    <string name="edit_note">Edit Note</string>
    <string name="welcome">Welcome</string>
    <string name="notes">Notes</string>
    <string name="already_have_an_account_login">Already have an account ? <font color="#EFGTED">Login</font></string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account ? <font color="#EFGTED">Login</font></string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>