<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".ui.AddNoteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        android:layout_alignParentTop="true"
        >

        <ImageView
            android:id="@+id/close"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="18dp"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/add_note" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:layout_marginStart="15dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/add_note"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/close"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:src="@drawable/baseline_done_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_marginHorizontal="18dp"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/constraintLayout"
        >

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="19"
            android:maxLength="2"
            android:fontFamily="@font/sf_pro_display_bold"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/monthYear"
            android:fontFamily="@font/sf_pro_display_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Dec 2023"
            android:layout_marginStart="2dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

    </LinearLayout>

    <EditText
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:layout_marginHorizontal="18dp"
        android:background="@drawable/bg"
        android:hint="@string/title"
        android:paddingVertical="5dp"
        android:textColorHint="@android:color/darker_gray"
        android:paddingHorizontal="10dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@id/linearLayout"
        />

    <EditText
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg"
        android:gravity="top|start"
        android:paddingVertical="10dp"
        android:paddingHorizontal="10dp"
        android:hint="@string/write_here"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="15sp"
        android:layout_below="@id/tvTitle"/>

</RelativeLayout>