<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/login_bg"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.LoginFragment">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/constraint"
    >

    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/sign_in_with_google"
        android:src="@drawable/user2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/image"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:text="@string/welcome_back"
        android:textColor="@color/light_black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/sf_pro_display_regular"
        android:gravity="top|start"
        android:hint="Username"
        android:paddingHorizontal="10dp"
        android:paddingVertical="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/light_black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:inputType="textPersonName"
        android:autofillHints="username"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/sf_pro_display_regular"
        android:gravity="top|start"
        android:hint="Password"
        android:paddingHorizontal="10dp"
        android:paddingVertical="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/light_black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:inputType="textPassword"
        android:autofillHints="password"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_display_medium"
        android:paddingHorizontal="40dp"
        android:paddingVertical="15dp"
        android:layout_marginTop="10dp"
        android:text="Login"
        android:textSize="15sp"
        app:cornerRadius="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:background="#CBA5A5A5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <TextView
        android:id="@+id/redirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="@color/light_black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:text="OR"
        android:textColor="@color/light_black"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/redirect" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/google_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/google"
        android:fontFamily="@font/sf_pro_display_medium"
        android:paddingVertical="5dp"
        android:layout_marginTop="10dp"
        android:text="Continue with google"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:backgroundTint="@color/white"
        app:cornerRadius="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:indeterminateTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

</androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>